//
//  Identifier.swift
//  Alarm
//
//  Created by Kawagoe Wataru on 2025/01/26.
//

enum Identifier {
    
    //main
    static let dayOfTheWeek = "main_day_of_the_week_Label"
    static let time = "main_time_Label"
    
    //cell's model is "\(.cellButton)_\(index)".
    static let cellButton = "main_cell_button"
    static let plusButton = "main_plus_button"
    
    static let mainList = "main_list"
    //cell's model is "\(.mainSection)_\(header)".
    static let mainSection = "main_section"
    
//    static let mainHeader = "main_header"
    
    //toggle's model is "\(.toggle)_\(index)".
    static let toggle = "main_toggle"
    
    static let mainView = "main_view"
    
    //input
    static let datepicker = "input_datepicker"
    static let goodMorning = "input_defaultmenu"
    static let menu = "input_menu"
    static let navigationLink = "input_navigationLink"
    static let repetition = "input_repetition_label"
    static let textfield = "input_textfield"
    
    static let cancelButton = "input_cancel_button"
    static let saveButton = "input_save_button"
    
    static let inputList = "input_list"
    
    static let datepickerSection = "input_datepicker_section"
    static let settingSection = "input_setting_section"
    
    static let inputView = "input_view"
    
    //mark
    //button's model is "\(.button)_\(index)".
    static let markBackward = "mark_backward"
    
    static let markButton = "mark_button"
    
    static let markImage = "mark_image"
    
    static let markList = "mark_list"
    
    static let markView = "mark_view"
    
}
